# IFVGrabber

./: .gitignore  CMakeLists.txt  ifvgrabber.kdev4  main.cpp  torrentmanager.cpp  torrentmanager.h
cmake/: FindRBTorrent.cmake
