CMAKE_MINIMUM_REQUIRED (VERSION 2.6)
PROJECT (ifvgrabber)

IF (UNIX)
	SET (CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -fvisibility=hidden -fno-strict-aliasing -std=c++0x")
	SET (CMAKE_SHARED_LINKER_FLAGS "${CMAKE_SHARED_LINKER_FLAGS} -Wl,--as-needed")
	SET (CMAKE_EXE_LINKER_FLAGS "${CMAKE_EXE_LINKER_FLAGS} -Wl,--as-needed")
	SET (CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -Wall -Wextra")
ENDIF (UNIX)

SET (CMAKE_MODULE_PATH ${CMAKE_MODULE_PATH} "${PROJECT_SOURCE_DIR}/cmake")

FIND_PACKAGE (Boost REQUIRED COMPONENTS program_options filesystem system)
FIND_PACKAGE (RBTorrent REQUIRED)

INCLUDE_DIRECTORIES (${CMAKE_CURRENT_BINARY_DIR}
	${CMAKE_CURRENT_SOURCE_DIR}
	${Boost_INCLUDE_DIR}
	${RBTorrent_INCLUDE_DIR})

SET (SRCS
	main.cpp
	torrentmanager.cpp
	)

SET (HEADERS
	torrentmanager.h
	)

SOURCE_GROUP ("core\\headers" FILES ${HEADERS})
SOURCE_GROUP ("core\\sources" FILES ${SRCS})

ADD_DEFINITIONS (-DBOOST_ASIO_DYN_LINK)

IF (UNIX)
	ADD_EXECUTABLE (ifvgrabber WIN32
		${SRCS}
		${HEADERS}
		)
ENDIF (UNIX)

TARGET_LINK_LIBRARIES (ifvgrabber
		${Boost_PROGRAM_OPTIONS_LIBRARY}
		${Boost_FILESYSTEM_LIBRARY}
		${RBTorrent_LIBRARY}
		)

INSTALL (TARGETS ifvgrabber DESTINATION bin)